--- a/css/style.css
+++ b/css/style.css
@@ -14,16 +14,14 @@ body{
     margin: 90px auto 0 auto;
 }
 
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+
 
 /* navbar style */
 
-nav {
-    
+nav .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 nav ul{
@@ -46,16 +44,20 @@ nav ul li{
 /* main section */
 
 /* first section */
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .half-width{
-    
     margin-top: 50px;
-    width: 50%;
     display: flex;
     justify-content: center;
 }
 
 .first-section{
     display: inline-block;
+    width: 50%;
 }
 
 .first-section h1{
@@ -101,3 +103,71 @@ nav ul li{
 .half-width img {
     height: 470px;
 }
+
+.companies{
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    /* border-color: linear-gradient(90deg, rgba(192, 204, 218, 0.1) 0%, rgba(192, 204, 218, 0.6) 50.38%, rgba(192, 204, 218, 0.1) 100%); */
+    margin: 70px auto 100px auto;
+    padding: 36px 60px;
+    width: 85%;
+    
+}
+.popular-collection{
+    width: 80%;
+    margin: 0 auto 100px auto;
+}
+.popular-collection h1{
+    text-align: center;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 28px;
+    color: #3A3A3A;
+}
+
+.collections{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
+
+.card{
+    border: 1px solid  rebeccapurple;
+    padding: 15px;
+}
+
+.card img{
+    width: 100%;
+}
+
+.ratings{
+    display: flex;
+    align-items: center;
+    font-size: 10px;
+    color: #FB8200;
+}
+
+.ratings p{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    color: #5E6366;
+}
+
+.see-more{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 50px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    color: rgba(224, 44, 109, 0.87);
+}
+
+.see-more p{
+    padding: 0 10px;
+}
+
+
