--- a/css/style.css
+++ b/css/style.css
@@ -105,16 +105,19 @@ nav ul li{
 }
 
 .companies{
-    border-top: 1px solid;
-    border-bottom: 1px solid;
-    /* border-color: linear-gradient(90deg, rgba(192, 204, 218, 0.1) 0%, rgba(192, 204, 218, 0.6) 50.38%, rgba(192, 204, 218, 0.1) 100%); */
-    margin: 70px auto 100px auto;
-    padding: 36px 60px;
-    width: 85%;
-    
+    /* border-top: 1px solid; */
+    /* border-bottom: 1px solid; */
+    /* background-image: linear-gradient(90deg, rgba(192, 204, 218, 0.1) 0%, rgba(192, 204, 218, 0.6) 50.38%, rgba(192, 204, 218, 0.1) 100%); */
+    margin: 50px auto 65px auto;
+    width: 90%;  
+}
+.companies .line{
+    margin: 35px 0;
+    height: 1px;
+    background-image: linear-gradient(90deg, rgba(192, 204, 218, 0.1) 0%, rgba(192, 204, 218, 0.6) 50.38%, rgba(192, 204, 218, 0.1) 100%);
 }
 .popular-collection{
-    width: 80%;
+    width: 85%;
     margin: 0 auto 100px auto;
 }
 .popular-collection h1{
@@ -123,6 +126,8 @@ nav ul li{
     font-weight: 600;
     font-size: 28px;
     color: #3A3A3A;
+    margin-bottom: 30px;
+    padding-top: 20px;
 }
 
 .collections{
