--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,19 @@ nav ul{
     
 }
 
+.navs{
+    display: flex;
+}
+
 nav ul li{
     padding: 0 17px 0 17px;
     color: #3A3A3A;
     font-size: 16px;
+}
+.menu{
+    display: none;
+    font-size: 24px;
+    padding: 0 17px 0 17px;
 }
 
 .navs .icon{
@@ -104,10 +113,9 @@ nav ul li{
     height: 470px;
 }
 
+/* companies */
+
 .companies{
-    /* border-top: 1px solid; */
-    /* border-bottom: 1px solid; */
-    /* background-image: linear-gradient(90deg, rgba(192, 204, 218, 0.1) 0%, rgba(192, 204, 218, 0.6) 50.38%, rgba(192, 204, 218, 0.1) 100%); */
     margin: 50px auto 65px auto;
     width: 90%;  
 }
@@ -116,6 +124,12 @@ nav ul li{
     height: 1px;
     background-image: linear-gradient(90deg, rgba(192, 204, 218, 0.1) 0%, rgba(192, 204, 218, 0.6) 50.38%, rgba(192, 204, 218, 0.1) 100%);
 }
+
+
+
+
+
+/* popular collection */
 .popular-collection{
     width: 85%;
     margin: 0 auto 100px auto;
@@ -137,12 +151,29 @@ nav ul li{
 }
 
 .card{
-    border: 1px solid  rebeccapurple;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
     padding: 15px;
 }
 
 .card img{
     width: 100%;
+    border-radius: 5px;
+}
+
+.card .title{
+    font-weight: 500;
+    font-size: 28px;
+    color: #18191F;
+}
+
+.card .price{
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    color: rgba(0, 0, 0, 0.87);
 }
 
 .ratings{
@@ -150,6 +181,7 @@ nav ul li{
     align-items: center;
     font-size: 10px;
     color: #FB8200;
+    padding: 10px 10px 10px 0;
 }
 
 .ratings p{
@@ -158,6 +190,7 @@ nav ul li{
     font-weight: 700;
     font-size: 14px;
     color: #5E6366;
+    padding-left: 10 px;
 }
 
 .see-more{
@@ -175,4 +208,76 @@ nav ul li{
     padding: 0 10px;
 }
 
+
+@media screen and (max-width: 576px){
+    
+    nav ul{
+        display: none;
+    }
+    .menu{
+        display: inline-block;
+    }
+    nav .container {
+        margin-top: -20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .mobile-container{
+        flex-direction: column-reverse;
+    }
+
+
+    .half-width{
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .half-width img{
+        width: 80%;
+        height: 80%;
+    }
+
+    .half-width h1{
+        font-family: 'Poppins';
+        font-weight: 700;
+        font-size: 28px;
+        text-align: center;
+        color: #3A3A3A;
+    }
+    .half-width .description{
+        font-weight: 500;
+        font-size: 14px;
+        text-align: center;
+        color: #3A3A3A;
+    }
+
+
+    .companies .container {
+        /* display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        justify-content: center;
+        align-items: center; */
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .container object{
+        padding: 10px;
+    }
+
+    .popular-collection{
+        width: 90%;
+
+    }
+
+    .collections{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    
+}  
 
