--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,9 @@ body{
 
 
 /* navbar style */
-.menu{
+.container .menu{
+    font-size: 24px;
+    padding: 0 17px 0 17px;
     display: none;
 }
 nav .container {
