--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,7 @@
 
 * {
     padding: 0;
-    margin: 0;
-    
+    margin: 0; 
 }
 
 body{
@@ -215,8 +214,11 @@ nav ul li{
     nav ul{
         display: none;
     }
-    .menu{
+
+    .container .menu {
         display: inline-block;
+        font-size: 24px;
+        padding: 0 17px 0 17px;
     }
     nav .container {
         margin-top: -20px;
